# CustomFighter

./: CMakeLists.txt
src/core/: animated_texture.cpp  animated_texture.h  animation.cpp  animation.h  audio.cpp  audio.h  button.cpp  button.h  clothing.cpp  clothing.h  hit.h  input_interpreter.cpp  input_interpreter.h  math.cpp  math.h  menu.cpp  menu.h  move.cpp  move.h  net_tools.cpp  player.cpp  player.h  render_instance.cpp  render_instance.h  save.cpp  save.h  scene_transition.cpp  scene_transition.h  skeleton.cpp  skeleton.h  stage.cpp  stage.h  video.cpp  video.h
src/editor/: editor.cpp  editor.h  main.cpp
src/game/: button_config.cpp  button_config.h  character_select.cpp  character_select.h  game_creation.cpp  game_creation.h  game_state.cpp  game_state.h  game_tools.cpp  game_tools.h  lobby.cpp  lobby.h  local_game.cpp  local_game.h  main.cpp  net_game.cpp  net_game.h  options.cpp  options.h  player.cpp  player.h  practise_game.cpp  practise_game.h  video_config.cpp  video_config.h
